<resources>
    <string name="app_name">InstaMaven</string>
    <string name="email">Email</string>
    <string name="or">or</string>
    <string name="empty"></string>
    <string name="empty_error">Empty value</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to_instamaven">Welcome to instamaven</string>
    <string name="personal_info">Personal Info</string>
    <string name="customer_info">Customer Info</string>
    <string name="primary_address">Address Info</string>
    <string name="address1">Address: </string>
    <string name="address2"> </string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip">Zip:</string>
    <string name="country">Country:</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="next_arrow">Next >></string>
    <string name="back">Press Back</string>
    <string name="badges">Badges:</string>
    <string name="calling">Calling...</string>
    <string name="income_call">Income Call...</string>
    <string name="date">Date:</string>
    <string name="value">Value:</string>
    <string name="address">Your Full Post Address</string>
    <string name="save_badge">Save Badge</string>
    <string name="to_exit">to exit the profile, click the log out</string>
    <string name="list">List</string>
    <string name="title_root_category">Available Categories</string>
    <string name="select_categories">Select Categories</string>
    <string name="edit_title">Title</string>
    <string name="edit_description">A short description to promote yourself</string>
    <string name="description">Description</string>
    <string name="edit_price">Price</string>
    <string name="edit_address">Address:</string>
    <string name="edit_url">Web Site:</string>
    <string name="edit_categories">Categories:</string>
    <string name="search">Search</string>
    <string name="search_arrow">Search >></string>
    <string name="create_badge_app_bar">Create Badge</string>
    <string name="edit_badge_app_bar">Edit Badge</string>
    <string name="view_badge">InstaMaven Badge</string>
    <string name="video_call">Video Call</string>
    <string name="call">Call</string>
    <string name="call_length">Call Length:</string>
    <string name="settings">Settings</string>
    <string name="comments">Comments</string>
    <string name="like">Like</string>
    <string name="categories">All Badges</string>
    <string name="categories_choice">Choose Categories</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="activation">Activation: </string>
    <string name="amount">Amount: </string>
    <string name="addBadge">Add Badge</string>
    <string name="my_badges">My Badges</string>
    <string name="chat_logs">Chat Logs</string>
    <string name="all_chatlogs">All Chat Logs</string>
    <string name="income_chatlogs">Income</string>
    <string name="outcome_chatlogs">Outcome</string>
    <string name="activities">Activities</string>
    <string name="activities_not_found">Activities not found</string>
    <string name="all_activities">All Activities</string>
    <string name="list_transactions">Transactions</string>
    <string name="transactions_not_found">Transactions not found</string>
    <string name="list_withdrawing">Withdrawing</string>
    <string name="withdrawing_not_found">Withdrawing not found</string>
    <string name="wallet">Wallet</string>
    <string name="favorites">Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_profile">Logout From Profile</string>
    <string name="logout_profile_alert">Do you want to logout?</string>
    <string name="notification_all_delete">All Notifications Will Be Cleared </string>
    <string name="register">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="registration">Registration</string>
    <string name="your_name">Your Name:</string>
    <string name="your_email">Your Email:</string>
    <string name="user">User:</string>
    <string name="users">Users:</string>
    <string name="user_name">User Name:</string>
    <string name="user_email">User Email:</string>
    <string name="customer_name">Customer Name</string>
    <string name="recharge">Recharge</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdrawing">Withdrawing</string>
    <string name="charge">Charge: </string>
    <string name="reward">Reward: </string>
    <string name="sec">sec.</string>
    <string-array name="coins">
        <item>Coin</item>
        <item>Coins</item>
        <item>Coins</item>
    </string-array>
    <string name="coins_withdraw">Coins:</string>
    <string name="coin_price">Coin Price:</string>
    <string name="in_coins">In Coins</string>
    <string name="choice_withdraw">Withdraw</string>
    <string name="number_withdraw">How many coins to withdraw</string>
    <string name="min_withdraw_coins">from %d to %d coins</string>
    <string name="withdraw_error">You can withdraw from %d to %d coins</string>
    <string name="per_minute">Per Minute</string>
    <string name="choose_package">Choose Package</string>
    <string name="logged_with">Logged With</string>
    <string name="bonuses">Bonuses:</string>
    <string name="balance">Balance:</string>
    <string name="password">Password</string>
    <string name="create_badge">Create Badge</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="badges_not_found">Badges not found</string>
    <string name="call_not_found">Call not found</string>
    <string name="themes_not_found">Themes not found</string>
    <string name="comments_not_found">Comments not found</string>
    <string name="notifications_not_found">Notifications not found</string>
    <string name="chatlogs_not_found">Chat Logs not found</string>
    <string name="income_call_not_found">Income call not found</string>
    <string name="outcome_call_not_found">Outcome call not found</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile_corrupted">Profile is corrupted</string>
    <string name="btn_tag">btn_%d</string>
    <string name="signal_sent">Request Sent to Badge Owner</string>
    <string name="signal_video">Video request from %s</string>
    <string name="signal_chat">Chat request from %s</string>
    <string name="reject_video">Video request rejected</string>
    <string name="video_request">Video Request</string>
    <string name="video_finished">Video Finished</string>
    <string name="chat_request">Chat Request</string>
    <string name="user_busy">User Busy</string>
    <string name="user_busy_msg">User cannot receive your call right now</string>
    <string name="check_empty_title">Please enter title</string>
    <string name="check_empty_description">Please enter description</string>
    <string name="check_empty_price">Please enter price</string>
    <string name="check_empty_comment">Please enter comment</string>
    <string name="check_empty_search_keywords">Please enter keywords</string>
    <string name="check_wrong_type_url">Format url address is invalid, use http://</string>
    <string name="alarm_title_error">Error</string>
    <string name="alarm_text_error">Message</string>
    <string name="alarm_title_complete">Complete!</string>
    <string name="done">Done</string>
    <string name="activation_badge_title">Badge Activation</string>
    <string name="activation_badge_message">Activation cost is %d %s. Activate this badge?</string>
    <string name="activation_alert_complete">Your badge have been activated</string>
    <string name="deactivation_badge_title">Badge Deactivation</string>
    <string name="deactivation_badge_massages">Deactivate this badge?</string>
    <string name="deactivation_alarm_complete">Your badge have been deactivated</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="alarm_text_complete">Your badge have been saved</string>
    <string name="alarm_text_comment">Your comment have been saved</string>
    <string name="please_rate">Please rate the badge</string>
    <string name="please_comment">Please leave your comment</string>
    <string name="add_comment">Add Your Comment</string>
    <string name="comment_here">Add Your Comment Here</string>
    <string name="save_comment">Save Comment</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="clear_btn">Clear</string>
    <string name="recharge_title">Check Your Balance</string>
    <string name="recharge_message">Your balance is %d %s.</string>
    <string name="click_back_exit">Please click BACK again to exit application</string>
    <string name="show_maps">Show on map:</string>
    <string name="show">Map View:</string>
    <string name="price_type">Price Type:</string>
    <string name="radio_button_fixed">Fixed Price</string>
    <string name="notifications_clear">All Notifications Clear</string>
    <string name="radio_button_per_minutes">Per Minute</string>
    <string name="payment_transaction">Payment Transaction</string>
    <string name="payment_completed">Payment Successfully Completed</string>
    <string name="withdraw_completed">Operation have been completed. We will contact you shortly.</string>
    <string name="signed_in_facebook">Welcome! You Signed In With Facebook</string>
    <string name="signed_in_google">Welcome! You Signed In With Google</string>
    <string name="signed_in_twitter">Welcome! You Signed In With Twitter</string>
    <string name="permissions_alert">This app needs access to your camera and mic to make video calls</string>
    <string name="ringtone">Ringtone</string>
    <string name="ringtone_select">Select a ringtone</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_maps">Maps</string>
    <string name="rate_type_1">Very Bad</string>
    <string name="rate_type_2">Not Bad</string>
    <string name="rate_type_3">Good</string>
    <string name="rate_type_4">Great</string>
    <string name="rate_type_5">Awesome</string>
    <string name="status">Status</string>
    <string name="status_offline_online">Status offline/online</string>
    <string name="status_online">online</string>
    <string name="status_offline">offline</string>
    <string name="status_all">all</string>
    <string name="status_visible">Visible</string>
    <string name="status_invisible">Invisible</string>
    <string name="enabled_offline_mode">Enabled offline mode, you can not receive or make calls</string>
    <string name="message_offline">Do you want to enable offline mode? Calls will not be available,
you can not receive or make calls.</string>
    <string name="message_online">Enable online mode?</string>
    <string name="type_keywords">Type keywords</string>
    <string name="search_advanced">Advanced Search</string>
    <string-array name="distance">
        <item>km</item>
        <item>ml</item>
    </string-array>
    <string name="location">My Location:</string>
    <string name="message_clean_search_filters">Search filters will be cleared</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="km">km</string>
    <string name="ml">ml</string>
    <string name="kilometers">kilometers</string>
    <string name="show_my_location">Use my location</string>
    <string name="show_my_location_message">You can use map, to search badges</string>
    <string name="show_search_results">Unit</string>
    <string name="show_search_results_message">Use this type determine distance</string>
</resources>