<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/addBadge"
            android:icon="@drawable/ic_add_badge"
            android:title="@string/addBadge" />
        <item
            android:id="@+id/helper"
            android:icon="@drawable/ic_all_badges"
            android:title="@string/categories" />
        <item
            android:id="@+id/accountUser"
            android:icon="@drawable/ic_profile"
            android:title="@string/account" />
        <item
            android:id="@+id/my_badges"
            android:icon="@drawable/ic_my_badges"
            android:title="@string/my_badges" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_my_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_notifications"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/notifications" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
